syntax = "proto3";

package telegram;

import "google/protobuf/empty.proto";

service Telegram {
  rpc Login(LoginMessage) returns (Result) {};
  rpc Sign(SignMessage) returns (Result) {};
  rpc Me(google.protobuf.Empty) returns (MeResponse) {};
  rpc Send(SendMessageRequest) returns (Result) {};
}

message LoginMessage {
  string phone = 1;
}

message SignMessage {
  string code = 1;
}

message Result {
  bool success = 1;
}

message User {
  bool self = 1;
  bool contact = 2;
  bool mutualContact = 3;
  bool deleted = 4;
  bool bot = 5;
  bool botChatHistory = 6;
  bool botNochats = 7;
  bool verified = 8;
  bool restricted = 9;
  bool min = 10;
  bool botInlineGeo = 11;
  bool support = 12;
  bool scam = 13;
  bool applyMinPhoto = 14;
  bool fake = 15;
  string id = 16;
  string accessHash = 17;
  string firstName = 18;
  string lastName = 19;
  string phone = 20;
}

message MeResponse {
  User user = 1;
}

message SendMessageRequest {
  string peer = 1;
  string message = 2;
}
